--- a/static/templates/weather.html
+++ b/static/templates/weather.html
@@ -9,4 +9,5 @@
     <p>Temperature: {{ weather['current_weather']['temperature'] }}°C</p>
     <a href="{{ url_for('index') }}">Back</a>
 </body>
+<script></script>
 </html>
