add cache with redis

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Прогноз погоды</title>
-    <style>
-        .autocomplete-suggestions {
+    <!-- <style>
+        /* .autocomplete-suggestions {
             border: 1px solid #ddd;
             max-height: 150px;
             overflow-y: auto;
@@ -18,8 +18,10 @@
         }
         .autocomplete-suggestion:hover {
             background-color: #e0e0e0;
-        }
-    </style>
+        } */
+
+    </style> -->
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <h1>Введите название города</h1>
