--- a/static/templates/stats.html
+++ b/static/templates/stats.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Statistics</title>
-    <style>
+    <!-- <style>
         /* Пример стилей для таблицы */
         table {
             width: 50%;
@@ -19,7 +19,8 @@
         th {
             background-color: #f2f2f2;
         }
-    </style>
+    </style> -->
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <h1>Search Statistics</h1>
