--- a/static/templates/weather.html
+++ b/static/templates/weather.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Погода в  {{ city | title }}</title>
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <h1>Погода в {{ city | title}}:</h1>
-    <p>Temperature: {{ weather['current_weather']['temperature'] }}°C</p>
+    <p class="get-weather">Temperature: {{ weather['current_weather']['temperature'] }}°C</p>
     <a href="{{ url_for('index') }}">Back</a>
 </body>
 <script></script>
