--- a/static/templates/stats.html
+++ b/static/templates/stats.html
@@ -1,47 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search Statistics</title>
-    <!-- <style>
-        /* Пример стилей для таблицы */
-        table {
-            width: 50%;
-            margin: 20px auto;
-            border-collapse: collapse;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style> -->
-    <link rel="stylesheet" href="/static/styles.css">
-</head>
-<body>
-    <h1>Search Statistics</h1>
+{% extends "base.html" %}
 
-    <table>
-        <thead>
-            <tr>
-                <th>City</th>
-                <th>Search Count</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for city, count in search_counts.items() %}
-            <tr>
-                <td>{{ city }}</td>
-                <td>{{ count }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <a href="{{ url_for('index') }}">Back</a>
+{% block title %}Статистика{% endblock %}
 
-</body>
-</html>
+{% block content %}
+<section class="stats">
+    <h1 class="title-page">Статистика поиска</h1>
+    <ul class="stats_ul">
+        {% for city, count in search_counts.items() %}
+            <li class="stats-item">
+                <span class="stats-city">{{ city }}</span>
+                <span class="stats-count">{{ count }}</span>
+            </li>
+        {% endfor %}
+    </ul>
+</section>
+{% endblock %}
